--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 OPENRSC_TCP_PORT=43594
 OPENRSC_WS_PORT=43494
 CLIENT_PORT=3333
-DB_USER=root
-DB_PASSWORD=root
+DB_USER=openrsc
+DB_PASSWORD=openrsc
 DB_PORT=3307
