--- a/server/connections.conf
+++ b/server/connections.conf
@@ -2,8 +2,8 @@ db_type: mysql # This may be either mysql or sqlite. If mysql, the connection de
 
 mysql:
 	db_host: mariadb:3306
-	db_user: root
-	db_pass: root
+	db_user: openrsc
+	db_pass: openrsc
 	db_table_prefix: # leave blank unless needed
 
 ssl:
